--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
   implementation("net.datafaker:datafaker:2.4.2")
 
+  testImplementation("org.junit.jupiter:junit-jupiter-engine:5.10.0")
+
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
