--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-  implementation('org.hibernate:hibernate-core:7.0.0.Alpha3')
+  implementation ('org.hibernate.orm:hibernate-core:6.4.4.Final')
   implementation('org.glassfish.jaxb:jaxb-runtime:4.0.5')
 
   implementation("org.mariadb.jdbc:mariadb-java-client:3.5.1")
